@@ -1,12 +1,17 @@
 DIST Text-Aspell-0.06.tar.gz 13343 RMD160 e4f6a084566d518f52c80c78d65e37d3c763de71 SHA1 928c4f9ace4d05482ce33fbdd64ac97f2bca7d7f SHA256 12bdbca30831d8e01271b4cdf35b1f2abb1c9c7d8530f138711f44aa0dd671f7
+DIST Text-Aspell-0.07.tar.gz 13483 RMD160 39b5807e0290f2451c15f32ea1baaa69c9bac4e8 SHA1 675cac88d6cb92e65762914be879c0fd74d1bbab SHA256 f880ac96640c177a6a71307d41d400f3671408cd788b53c3e467698e81e6a53a
 EBUILD Text-Aspell-0.06.ebuild 612 RMD160 cdf670099ad54b23f11301910ab7796f401c42b3 SHA1 02186c2535f0b6e36ec8524614aa0b1433f2f5da SHA256 4ff417d6dd1f85eaaf74735de77e04a641242e97b1177ee9fe0af8d3def9b8ef
 MD5 d5b3c5e0311804769b6b403502a9a5c0 Text-Aspell-0.06.ebuild 612
 RMD160 cdf670099ad54b23f11301910ab7796f401c42b3 Text-Aspell-0.06.ebuild 612
 SHA256 4ff417d6dd1f85eaaf74735de77e04a641242e97b1177ee9fe0af8d3def9b8ef Text-Aspell-0.06.ebuild 612
-MISC ChangeLog 3592 RMD160 db13fb04db379d33e986c2a0b4e14424ce683975 SHA1 e3422d90de7de4bdcab17c0ed23ec063eca44d9a SHA256 4bdc703403a47fe8ba01de536e4e9ec1d03b0a1bc5fe21d962136595fad35230
-MD5 bbb92cf2c633a38f2b69088dcfe83b1f ChangeLog 3592
-RMD160 db13fb04db379d33e986c2a0b4e14424ce683975 ChangeLog 3592
-SHA256 4bdc703403a47fe8ba01de536e4e9ec1d03b0a1bc5fe21d962136595fad35230 ChangeLog 3592
+EBUILD Text-Aspell-0.07.ebuild 629 RMD160 74a7c525ac8d33f140fdd591855d063c9eb7a461 SHA1 fbe5b567b82f7d6eaf5fda32801584d6b70629dd SHA256 b5193897027c5632890813529451dd9311d1a72c8a0e397a8a98347cab599286
+MD5 19233682303eaf4a0a4426cb6e04a68c Text-Aspell-0.07.ebuild 629
+RMD160 74a7c525ac8d33f140fdd591855d063c9eb7a461 Text-Aspell-0.07.ebuild 629
+SHA256 b5193897027c5632890813529451dd9311d1a72c8a0e397a8a98347cab599286 Text-Aspell-0.07.ebuild 629
+MISC ChangeLog 3728 RMD160 d9af196e4ef3f1d6642f10f8f752a7dabc284bc4 SHA1 6b429c62b59e4ef106cfa9ae39a31c871e4c1cc8 SHA256 53bb809d189ecfa38e280eff5e54a63a8ba0791db1a4061cf557c16498a4bd6e
+MD5 a1f3ef2871238fa658e4739d50479d35 ChangeLog 3728
+RMD160 d9af196e4ef3f1d6642f10f8f752a7dabc284bc4 ChangeLog 3728
+SHA256 53bb809d189ecfa38e280eff5e54a63a8ba0791db1a4061cf557c16498a4bd6e ChangeLog 3728
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
@@ -14,3 +19,6 @@ SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca metadata
 MD5 530d27472172d6eb726cce11ec96ed19 files/digest-Text-Aspell-0.06 247
 RMD160 eff7114bcccd088501551e42b6caae2a8a2d00ec files/digest-Text-Aspell-0.06 247
 SHA256 00d8694b689c5d1f2eb04f369307ca7a4f0417436024c8d436b6a554ce838a91 files/digest-Text-Aspell-0.06 247
+MD5 65b231b8e4570f4520df0ce2df0f43b4 files/digest-Text-Aspell-0.07 247
+RMD160 9483bcc56aef13dadb3fd88526846cb18b9d67aa files/digest-Text-Aspell-0.07 247
+SHA256 dedb157d0b7040ef3fd851b2d7b13a1c5b76cd3955ef808e05a031ae7b91067c files/digest-Text-Aspell-0.07 247
