@@ -1,0 +1,3 @@
+MD5 a456444cb3320634e218426273227cb4 Text-Aspell-0.07.tar.gz 13483
+RMD160 39b5807e0290f2451c15f32ea1baaa69c9bac4e8 Text-Aspell-0.07.tar.gz 13483
+SHA256 f880ac96640c177a6a71307d41d400f3671408cd788b53c3e467698e81e6a53a Text-Aspell-0.07.tar.gz 13483
