@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Text-Aspell
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Aspell/ChangeLog,v 1.29 2007/03/05 12:32:43 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Aspell/ChangeLog,v 1.30 2007/04/16 11:45:51 mcummings Exp $
+
+*Text-Aspell-0.07 (16 Apr 2007)
+
+  16 Apr 2007; Michael Cummings <mcummings@gentoo.org>
+  +Text-Aspell-0.07.ebuild:
+  Version bump
 
   05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Text-Aspell-0.06.ebuild:
   Stable on x86, bug #169152.
